--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,23 @@
 
 python_files = test_*.py
 python_functions = test_*
-testpaths = lesson_24
+; testpaths = lesson_29/tests
+
+addopts =
+    -v
+
+
+; Log to console
+log_cli = true
+log_level = INFO
+log_format = %(asctime)s.%(msecs)03d - %(levelname)s - %(message)s
+log_date_format = %Y-%m-%d %H:%M:%S
+
+; Log to file
+log_file = lesson_29/local_reports/test_results.log
+log_file_level = INFO
+log_file_format = %(asctime)s.%(msecs)03d - %(levelname)s - %(message)s
+log_file_date_format = %Y-%m-%d %H:%M:%S
 
 
 [loggers]
