--- a/pytest.ini
+++ b/pytest.ini
@@ -2,10 +2,11 @@
 
 python_files = test_*.py
 python_functions = test_*
-; testpaths = lesson_29/tests
+testpaths = lesson_29
 
 addopts =
     -v
+    --alluredir allure-results
 
 
 ; Log to console
